Fix alignment and spacing for ie

--- a/src/sass/components/_Pagination.scss
+++ b/src/sass/components/_Pagination.scss
@@ -1,7 +1,7 @@
 .PaginationControls {
   display: table;
   position: relative;
-  margin: 1em auto 2em;
+  margin: 1em auto 2.5em;
 
   h4,
   button {
@@ -18,6 +18,7 @@
     width: 3em;
     display: inline-block;
     margin: 0 0.25em;
+    height: 2em;
 
     label {
       height: 1px;
@@ -37,7 +38,7 @@
     bottom: 0;
     left: 50%;
     width: 40px;
-    margin-bottom: -30px;
+    margin-bottom: -35px;
     margin-left: -17px;
   }
 }
